# MLPro-Int-scikit-learn

./: .gitignore  .zenodo.json  CITATION.cff  README.md  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: ci.yml  pypi_deploy.yml
doc/rtd/: conf.py  index.rst  requirements.txt
src/: setup.py
src/mlpro_int_scikit_learn/wrappers/: __init__.py
src/mlpro_int_sklearn/: __init__.py  test.py
src/mlpro_int_sklearn/wrappers/: __init__.py  anomalydetectors.py  basics.py  streams.py  test2.py
test/howtos/bf/: howto_bf_streams_001_accessing_data_from_scikitlearn.py
test/howtos/oa/: howto_oa_ad_001_anomalydetector_oneclasssvm.py  howto_oa_ad_001_anomalydetector_oneclasssvm.py.off  howto_oa_ad_001_if_pa_1d.py  howto_oa_ad_001_oneclasssvm_pa_1d.py  howto_oa_ad_001_oneclasssvm_po_1d.py  howto_oa_ad_002_anomalydetector_lof.py  howto_oa_ad_002_if_pa_2d.py  howto_oa_ad_002_oneclasssvm_pa_2d.py  howto_oa_ad_002_oneclasssvm_po_2d.py  howto_oa_ad_003_anomalydetector_if.py  howto_oa_ad_003_anomalydetector_if.py.off  howto_oa_ad_003_if_pa_3d.py  howto_oa_ad_003_oneclasssvm_pa_3d.py  howto_oa_ad_003_oneclasssvm_po_3d.py  howto_oa_ad_004_if_pa_nd.py  howto_oa_ad_004_oneclasssvm_pa_nd.py  howto_oa_ad_004_oneclasssvm_po_nd.py  howto_oa_ad_005_if_paga_1d.py  howto_oa_ad_005_if_paga_1d.py.off  howto_oa_ad_005_oneclasssvm_paga_1d.py  howto_oa_ad_005_oneclasssvm_pogo_1d.py  howto_oa_ad_006_if_paga_2d.py  howto_oa_ad_006_oneclasssvm_paga_2d.py  howto_oa_ad_006_oneclasssvm_pogo_2d.py  howto_oa_ad_007_if_paga_3d.py.off  howto_oa_ad_008_if_paga_nd.py  (+81 more)
(+61 files in other folders)
