[metadata]
name = mlpro-int-scikit-learn
version = 0.4.0
author_email = mlpro@listen.fh-swf.de
description = MLPro: Integration scikit-learn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mlpro-int-scikit-learn.readthedocs.io
project_urls = 
    Bug Tracker = https://mlpro-int-scikit-learn.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
full =
    mlpro[full]>=2.1.0
    scikit-learn>=1.7.1
